--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,13 @@
-<%= link_to 'Cluster', clusters_path %>
-<%= link_to 'Server', servers_path %>
-<%= link_to 'Routing', routings_path %>
-<%= link_to 'Api', apis_path %>
+<div class="row">
+  <div class="col-xs-4">
+    <a class="github-button" href="https://github.com/fagongzi/gateway" data-size="large" data-show-count="true" aria-label="Star ArchFish/gateway_ui on GitHub">Star Gateway</a>
+  </div>
+  <div class="col-xs-4">
+    <a class="github-button" href="https://github.com/ArchFish/gateway_ui" data-size="large" data-show-count="true" aria-label="Star ArchFish/gateway_ui on GitHub">Star GatewayUI</a>
+  </div>
+</div>
+
+<div class="alert alert-danger">请不要允许开放网络访问当前服务！</div>
+<div class="alert alert-info">推荐使用docker运行</div>
+
+<script async defer src="https://buttons.github.io/buttons.js"></script>
