--- a/app/views/routings/index.html.erb
+++ b/app/views/routings/index.html.erb
@@ -1,31 +1,35 @@
-<table border="2">
-<tr>
-  <th>id</th>
-  <th>名字</th>
-  <th>路由策略</th>
-  <th>路由比例(%)</th>
-  <th>状态</th>
-  <th>API编号</th>
-  <th>动作</th>
-</tr>
-  <% @routings.each do |routing| %>
+<table class="table table-striped">
+  <thead>
     <tr>
-      <td><%= routing.id %></td>
-      <td><%= routing.name %></td>
-      <td><%=t routing.strategy_name, scope: 'enum.strategy' %></td>
-      <td><%= routing.traffic_rate %></td>
-      <td><%= routing.status_name %></td>
-      <td><%= routing.api %></td>
-      <td>
-        <%= link_to '编辑', edit_routing_path(routing.id) %>
-        <%= link_to '删除', routing_path(routing.id), method: :delete %>
-      </td>
+      <th>id</th>
+      <th>名字</th>
+      <th>路由策略</th>
+      <th>路由比例(%)</th>
+      <th>状态</th>
+      <th>API编号</th>
+      <th>动作</th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @routings.each do |routing| %>
+      <tr>
+        <td><%= routing.id %></td>
+        <td><%= routing.name %></td>
+        <td><%=t routing.strategy_name, scope: 'enum.strategy' %></td>
+        <td><%= routing.traffic_rate %></td>
+        <td><%= routing.status_name %></td>
+        <td><%= routing.api %></td>
+        <td>
+          <%= link_to '编辑', edit_routing_path(routing.id), class: 'btn btn-warning btn-xs' %>
+          <%= link_to '删除', routing_path(routing.id), method: :delete, class: 'btn btn-danger btn-xs' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<%= link_to '新建路由', new_routing_path %>
+<%= link_to '新建路由', new_routing_path, class: 'btn btn-primary' %>
 
 <% last_id = @routings.max{|x| x.id}.try(:id).to_i %>
-<%= link_to '第一页', routings_path(after: 0, per_page: @per_page || 10) %>
-<%= link_to_if last_id, '下一页', routings_path(after: last_id, per_page: @per_page || 10) %>
+<%= link_to '第一页', routings_path(after: 0, per_page: @per_page || 10), class: 'btn btn-primary' %>
+<%= link_to_if last_id, '下一页', routings_path(after: last_id, per_page: @per_page || 10), class: 'btn btn-primary' %>
