--- a/app/views/servers/index.html.erb
+++ b/app/views/servers/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'list', locals: {servers: @servers} %>
 
-<%= link_to '新建服务', new_server_path %>
+<%= link_to '新建服务', new_server_path, class: 'btn btn-primary' %>
 <% last_id = @servers.max{|x| x.id}.try(:id).to_i %>
-<%= link_to '第一页', servers_path(after: 0, per_page: @per_page || 10) %>
-<%= link_to_if last_id, '下一页', servers_path(after: last_id, per_page: @per_page || 10) %>
+<%= link_to '第一页', servers_path(after: 0, per_page: @per_page || 10), class: 'btn btn-primary' %>
+<%= link_to_if last_id, '下一页', servers_path(after: last_id, per_page: @per_page || 10), class: 'btn btn-primary' %>
