--- a/app/views/routings/_form.html.erb
+++ b/app/views/routings/_form.html.erb
@@ -1,15 +1,29 @@
-<%= form_tag(target, method: method) do |f| %>
-  <%= label_tag :name %>
-  <%= text_field_tag :name, @routing.name %></br>
-  <%= label_tag :strategy %>
-  <%= select_tag :strategy, options_for_select(Routing::Strategy, @routing.strategy) %></br>
-  <%= label_tag :traffic_rate %>
-  <%= number_field_tag :traffic_rate, @routing.traffic_rate %></br>
-  <%= label_tag :status %>
-  <%= select_tag :status, options_for_select(Routing::Status, @routing.status) %></br>
-  <%= label_tag :cluster_id %>
-  <%= select_tag :cluster_id, options_from_collection_for_select(@clusters, "id", "name") %></br>
-  <%= label_tag :api %>
-  <%= select_tag :api, options_from_collection_for_select(@apis, "id", "name") %>
-  <%= submit_tag '提交' %>
+<%= form_tag(target, method: method, role: "form") do |f| %>
+  <div class="form-group col-md-5">
+    <%= label_tag :name %>
+    <%= text_field_tag :name, @routing.name, class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-5">
+    <%= label_tag :strategy %>
+    <%= select_tag :strategy, options_for_select(Routing::Strategy, @routing.strategy), class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-5">
+    <%= label_tag :traffic_rate %>
+    <%= number_field_tag :traffic_rate, @routing.traffic_rate, class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-5">
+    <%= label_tag :status %>
+    <%= select_tag :status, options_for_select(Routing::Status, @routing.status), class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-5">
+    <%= label_tag :cluster_id %>
+    <%= select_tag :cluster_id, options_from_collection_for_select(@clusters, "id", "name"), class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-5">
+    <%= label_tag :api %>
+    <%= select_tag :api, options_from_collection_for_select(@apis, "id", "name"), class: 'form-control' %>
+  </div>
+  <div class="form-group col-md-11">
+    <%= submit_tag '提交', class: 'btn btn-default' %>
+  </div>
 <% end %>
