--- a/app/views/servers/_list.html.erb
+++ b/app/views/servers/_list.html.erb
@@ -6,16 +6,16 @@
     without_actions = false
   end
 %>
-<table class="table table-striped">
+<table class="table table-bordered table-condensed	">
   <thead>
     <tr>
       <th rowspan="2">id</th>
       <th rowspan="2">真实服务</th>
       <th rowspan="2">通讯协议</th>
       <th rowspan="2">最大QPS</th>
-      <th colspan="4">健康检查</th>
-      <th colspan="5">熔断</th>
-      <th rowspan="2">操作</th>
+      <th colspan="4" class="text-center">健康检查</th>
+      <th colspan="5" class="text-center">熔断</th>
+      <th rowspan="2" class="text-center">操作</th>
     </tr>
     <tr>
       <th>请求路径</th>
@@ -23,11 +23,11 @@
       <th>检查间隔(s)</th>
       <th>超时(s)</th>
       <% '以下为熔断配置' %>
-        <th>关闭延时(s)</th>
-        <th>半开比例(%)</th>
-        <th>统计周期(s)</th>
-        <th>失效比例(%)则半开变关闭</th>
-        <th>成功比例(%)则半开变开启</th>
+      <th>关闭延时(s)</th>
+      <th>半开比例(%)</th>
+      <th>统计周期(s)</th>
+      <th>失效比例(%)则半开变关闭</th>
+      <th>成功比例(%)则半开变开启</th>
     </tr>
   </thead>
   <tbody>
@@ -43,7 +43,6 @@
         <td><%= hc.try(:body) %></td>
         <td><%= hc.try(:check_interval_in_second) %></td>
         <td><%= hc.try(:timeout_in_second) %></td>
-
         <% cb = server.circuit_breaker %>
         <td><%= cb.try(:close_timeout_in_second) %></td>
         <td><%= cb.try(:half_traffic_rate) %></td>
