--- a/app/views/clusters/_list.html.erb
+++ b/app/views/clusters/_list.html.erb
@@ -34,7 +34,7 @@
         <% if !without_actions %>
           <td>
             <%= link_to '编辑', edit_cluster_path(cluster.id), class: 'btn btn-warning btn-xs' %>
-            <%= link_to '删除', cluster_path(cluster.id), method: :delete, class: 'btn btn-danger btn-xs' %>
+            <%= link_to '删除', cluster_path(cluster.id), method: :delete, class: 'btn btn-danger btn-xs', data: {confirm: "你确认删除吗？"} %>
             <%= link_to '服务列表', servers_cluster_path(cluster.id), class: 'btn btn-primary btn-xs' %>
             <%= button_tag '绑定服务', class: 'btn btn-primary btn-xs bind_server_modal_button', value: bind_server_cluster_path(cluster.id) %>
           </td>
