routing add conditions support

--- a/app/views/apis/_form.html.erb
+++ b/app/views/apis/_form.html.erb
@@ -22,31 +22,11 @@
     editor.setValue(api_value);
   }
 
-  editor.on('change', function () {
-    // Get an array of errors from the validator
-    let errors = editor.validate();
-    let holder = document.getElementById('error_holder')
-
-    if (errors.length) {
-      holder.innerText = JSON.stringify(errors);
-      holder.className = 'label label-warning label-lg';
-    } else {
-      holder.innerText = '';
-      holder.className = 'label';
-    }
-
-    submit_button.disabled = errors.length > 0
-  });
+  bindChangeEvent(editor, 'error_holder', submit_button);
 
   submit_button.addEventListener('click', function () {
-    let data = editor.getValue();
-
-    let csrf_param_element = document.querySelector('meta[name="csrf-param"]');
-    let csrf_param = csrf_param_element && csrf_param_element.getAttribute("content");
-    let csrf_token_element = document.querySelector('meta[name="csrf-token"]');
-    let csrf_token = csrf_token_element && csrf_token_element.getAttribute("content");
-
-    data[csrf_param] = csrf_token;
+    let data = {};
+    data.api = editor.getValue();
     submitData(method, url, data)
   });
 </script>
