--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">GatewayGUI</a>
+          <a class="navbar-brand" href="/">GatewayDashboard</a>
         </div>
         <div>
           <ul class="nav navbar-nav">
